# DFHack_Rust_plugin

./: CMakeLists.txt  README.md  hello.cpp
dfplugin_test/: CMakeLists.txt  Cargo.toml  build_code_commands.sh
dfplugin_test/src/: lib.rs
include/: hello.h
